--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>My Preso</title>
+  <title>Google Maps &raquo; Popdevelop</title>
 
   <link rel="stylesheet" href="./css/reset.css" type="text/css"/>
   <link rel="stylesheet" href="./css/showoff.css" type="text/css"/>
@@ -27,6 +27,8 @@
   <link type="text/css" href="./css/theme/ui.all.css" media="screen" rel="stylesheet" />
   <link type="text/css" href="./css/sh_style.css" rel="stylesheet" >
 
+  
+    <link rel="stylesheet" href="file/style.css" type="text/css"/>
   
 
   
@@ -69,17 +71,18 @@
 </div>
 
 <div id="slides" class="offscreen" style="display:none;">
-<div class="slide" data-transition="none"><div class="content" ref="one/01_slide/1">
-<h1>My Presentation</h1></div>
-</div><div class="slide" data-transition="none"><div class="content bullets incremental" ref="one/01_slide/2">
-<h1>Bullet Points</h1>
+<div class="slide" data-transition="none"><div class="content" ref="intro/01_slide/1">
+<h1>Google Maps on the web</h1>
 
-<ul>
-<li>first point</li>
-<li>second point</li>
-<li>third point</li>
-</ul>
-</div>
+<h2>Popdevelop 13/4 - 2011</h2></div>
+</div><div class="slide" data-transition="none"><div class="content" ref="intro/01_slide/2">
+<h1>Introduction</h1></div>
+</div><div class="slide" data-transition="none"><div class="content" ref="intro/01_slide/3">
+<h1>Google Maps basics</h1></div>
+</div><div class="slide" data-transition="none"><div class="content" ref="style/01_style">
+<h1>style</h1></div>
+</div><div class="slide" data-transition="none"><div class="content" ref="performance/01_performance">
+<h1>performance</h1></div>
 </div>
 </div>
 
