--- a/index.html
+++ b/index.html
@@ -91,18 +91,20 @@
 <li>Now into web</li>
 </ul>
 </div>
-</div><div class="slide" data-transition="none"><div class="content full-page work" ref="popdevelop/01_popdevelop/3">
-<h1>Some of our work</h1>
+</div><div class="slide" data-transition="none"><div class="content full-page" ref="popdevelop/01_popdevelop/3">
+<h1>Popdevelop TV</h1>
+
+<iframe title="YouTube video player" width="640" height="410" src="http://www.youtube.com/embed/DQ3ZCWFVx-4" frameborder="0">
+</iframe>
+</div>
+</div><div class="slide" data-transition="none"><div class="content full-page work" ref="popdevelop/01_popdevelop/4">
+<h1>What we do</h1>
 
 <ul>
 <li><a href="http://kollektivt.se">kollektivt.se</a> - Bus visualisation</li>
 <li><a href="http://taglaget.nu">taglaget.nu</a> - Train visualisation</li>
+<li>Web, Linux Embedded and iPhone development</li>
 </ul>
-
-
-<!-- Mer?
-Dogvibes, Consulting embedded, Consulting web, Iphone utveckling, Arduino
--->
 </div>
 </div><div class="slide" data-transition="none"><div class="content full-page family" ref="intro/01_slide/1">
 <h1>The google maps family</h1>
@@ -171,8 +173,9 @@ $('.family').bind('showoff:next', function(e) {
 <h2>Enhancements</h2>
 
 <ul>
-<li>Optimized "bootstrap" process</li>
+<li>Static pre-map for better UX</li>
 <li>More modular design</li>
+<li>Optimized "bootstrap" process</li>
 <li>Lower latency</li>
 </ul>
 </div>
@@ -223,7 +226,10 @@ $('.family').bind('showoff:next', function(e) {
 
 <p>This is what you get!</p>
 
-<div class="gmaps"><div id="canvas"/></div>
+<div class="gmaps">
+  <div id="canvas">
+  </div>
+</div>
 
 
 <script>
@@ -291,7 +297,10 @@ we can create our own marker using any HTML/CSS we want</p>
 
 <p>This is what google maps can look like</p>
 
-<div class="gmaps"><div id="canvas2"/></div>
+<div class="gmaps">
+  <div id="canvas2">
+  </div>
+</div>
 
 
 <script>
@@ -397,7 +406,10 @@ we can create our own marker using any HTML/CSS we want</p>
 <button id="zoomout">Zoom out</button>
 <button id="gowest">Go west!</button></p>
 
-<div class="gmaps"><div id="canvas3"/></div>
+<div class="gmaps">
+  <div id="canvas3">
+  </div>
+</div>
 
 
 <script>
@@ -442,7 +454,10 @@ the map to be draggable
 <p><button id="addmarkers">Add 100 Markers</button>
 <button id="clearmarkers">Clear Markers</button></p>
 
-<div class="gmaps"><div id="perf1_canvas"/></div>
+<div class="gmaps">
+  <div id="perf1_canvas">
+  </div>
+</div>
 
 
 
@@ -581,7 +596,10 @@ Often distance-based Clusteringm but attributes works good also
 <p><button id="addmarkerscluster">Add 100 Markers with MarkerClusterer</button>
 <button id="clearmarkerscluster">Clear Markers</button></p>
 
-<div class="gmaps"><div id="perf2_canvas"/></div>
+<div class="gmaps">
+  <div id="perf2_canvas">
+  </div>
+</div>
 
 
 
@@ -696,7 +714,10 @@ Generated tiles, how? tile server?
 </div><div class="slide" data-transition="none"><div class="content full-page googlemap_perf3" ref="performance/01_performance/15">
 <h1>KML</h1>
 
-<div class="gmaps"><div id="perf3_canvas"/></div>
+<div class="gmaps">
+  <div id="perf3_canvas">
+  </div>
+</div>
 
 
 <script>
@@ -727,7 +748,10 @@ Generated tiles, how? tile server?
 </div><div class="slide" data-transition="none"><div class="content full-page googlemap_perf4" ref="performance/01_performance/16">
 <h1>Google Fusion Table (Beta!)</h1>
 
-<div class="gmaps"><div id="perf4_canvas"/></div>
+<div class="gmaps">
+  <div id="perf4_canvas">
+  </div>
+</div>
 
 
 <script>
@@ -831,66 +855,47 @@ Render GIFs for IE, instead of alpha PNGs
 -->
 </div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="wrapup/01_wrapup/1">
-<h1>4. Demos...</h1></div>
+<h1>4. Demos...(FIXA BILD)</h1></div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="wrapup/01_wrapup/2">
 <h1><a href="http://bit.ly/fxBpw0">3D-maps, sweded?</a></h1></div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="wrapup/01_wrapup/3">
 <h1>3D-maps for Android?</h1>
 
-<iframe title="YouTube video player" width="640" height="410" src="http://www.youtube.com/embed/TAh4yiCzgKw" frameborder="0"/>
+<iframe title="YouTube video player" width="640" height="410" src="http://www.youtube.com/embed/TAh4yiCzgKw" frameborder="0">
+</iframe>
 
 
 <h3><a href="http://www.google.com/mobile/maps/3d/">Google Maps 5.0 for Android</a></h3></div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="wrapup/01_wrapup/4">
 <h1><a href="http://www.mapnificent.net/torino/#/?lat0=45.061105116935906&amp;lng0=7.713054452050756&amp;t0=15">Mapnificent Trip Planing</a></h1>
 
-<iframe title="Mapnificent Trip Planing" width="640" height="410" src="http://www.mapnificent.net/torino/#/?lat0=45.061105116935906=7.713054452050756=15" framborder="0"/>
+<iframe title="Mapnificent Trip Planing" width="640" height="410" src="http://www.mapnificent.net/torino/#/?lat0=45.061105116935906=7.713054452050756=15" framborder="0">
+</iframe>
 </div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="wrapup/01_wrapup/5">
 <h1>Isometric Maps?</h1></div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="wrapup/01_wrapup/6">
 <h1><a href="http://sewa.se/isometric/">Isometric Popdevelop Style</a></h1>
 
-<iframe title="Mapnificent Trip Planing" width="640" height="410" src="http://sewa.se/isometric" framborder="0"/>
+<iframe title="Mapnificent Trip Planing" width="640" height="410" src="http://sewa.se/isometric" framborder="0">
+</iframe>
 </div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="wrapup/01_wrapup/7">
 <h1><a href="http://bit.ly/fpzq1Q">Isometric China Style</a></h1></div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="wrapup/01_wrapup/8">
 <h1><a href="http://www.thewildernessdowntown.com/">Google Maps Music Video?</a></h1>
 
-<iframe title="YouTube video player" width="640" height="410" src="http://www.youtube.com/embed/w44cdIOor7E#t=1m5s" frameborder="0"/>
+<iframe title="YouTube video player" width="640" height="410" src="http://www.youtube.com/embed/w44cdIOor7E#t=1m5s" frameborder="0">
+</iframe>
 </div>
 </div><div class="slide" data-transition="none"><div class="content full-page" ref="wrapup/01_wrapup/9">
-<h1>References, l&#xE4;nkar</h1>
-
-<h3><a href="http://code.google.com/intl/sv-SE/apis/maps/documentation/javascript/overlays.html">Add all links here</a></h3>
-
-<h3><a href="http://code.google.com/intl/sv-SE/apis/maps/documentation/javascript/overlays.html">Google Maps Javascript API V3 Overlays</a></h3>
-
-<h3><a href="http://code.google.com/intl/sv-SE/apis/maps/documentation/javascript/overlays.html">Google Maps Javascript API V3 Overlays</a></h3>
-
-<h3><a href="http://code.google.com/intl/sv-SE/apis/maps/documentation/javascript/overlays.html">Google Maps Javascript API V3 Overlays</a></h3>
-
-<h3><a href="http://code.google.com/intl/sv-SE/apis/maps/documentation/javascript/overlays.html">Google Maps Javascript API V3 Overlays</a></h3>
-
-<h3><a href="http://code.google.com/intl/sv-SE/apis/maps/documentation/javascript/overlays.html">Google Maps Javascript API V3 Overlays</a></h3>
-
-<h3><a href="http://code.google.com/intl/sv-SE/apis/maps/documentation/javascript/overlays.html">Google Maps Javascript API V3 Overlays</a></h3>
-
-<h3><a href="http://code.google.com/intl/sv-SE/apis/maps/documentation/javascript/overlays.html">Google Maps Javascript API V3 Overlays</a></h3></div>
-</div><div class="slide" data-transition="none"><div class="content full-page" ref="wrapup/01_wrapup/10">
 <ul>
 <li><a href="http://popdevelop.com">http://popdevelop.com</a></li>
 <li><a href="http://twitter.com/popdevelop">http://twitter.com/popdevelop</a></li>
 <li><a href="http://www.youtube.com/popdevelop">http://www.youtube.com/popdevelop</a></li>
-<li><a href="http://flickr.com/popdevelop">http://flickr.com/popdevelop</a></li>
-<li><a href="http://popdevelop.github.com/FIXME">http://github.com/popdevelop</a></li>
+<li><a href="http://www.flickr.com/photos/56096350@N02">http://flickr.com/popdevelop</a></li>
+<li><a href="http://www.github.com/popdevelop">http://github.com/popdevelop</a></li>
 </ul>
-
-
-<h1>Visa hemma hos popdevelop?</h1>
-
-<!-- FIXME LINKS -->
 </div>
 </div>
 </div>
