--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
 <li>Web, Linux Embedded and iPhone development</li>
 </ul>
 </div>
-</div><div class="slide" data-transition="none"><div class="content full-page family" ref="intro/01_slide/1">
+</div><div class="slide" data-transition="none"><div class="content center light-on-dark" ref="intro/01_slide/1">
+<p><img src="file:///Users/sebastianwallin/dev/showoff/gtug/intro/../img/google-maps-intro.jpg" width="1280" height="800" alt="background"/></p>
+
+<h1>Google maps</h1></div>
+</div><div class="slide" data-transition="none"><div class="content full-page family" ref="intro/01_slide/2">
 <h1>The google maps family</h1>
 
 <h2>APIs</h2>
@@ -145,7 +149,7 @@ $('.family').bind('showoff:next', function(e) {
 }());
 </script>
 </div>
-</div><div class="slide" data-transition="none"><div class="content full-page" ref="intro/01_slide/2">
+</div><div class="slide" data-transition="none"><div class="content full-page" ref="intro/01_slide/3">
 <h1>Introduction, Google Maps V3</h1>
 
 <ul>
@@ -157,7 +161,7 @@ $('.family').bind('showoff:next', function(e) {
 
 
 <p>(demo in iOS simulator)</p></div>
-</div><div class="slide" data-transition="none"><div class="content full-page" ref="intro/01_slide/3">
+</div><div class="slide" data-transition="none"><div class="content full-page" ref="intro/01_slide/4">
 <h1>Optimizations from V2</h1>
 
 <h2>Problems</h2>
@@ -179,7 +183,7 @@ $('.family').bind('showoff:next', function(e) {
 <li>Lower latency</li>
 </ul>
 </div>
-</div><div class="slide" data-transition="none"><div class="content full-page incremental" ref="intro/01_slide/4">
+</div><div class="slide" data-transition="none"><div class="content full-page incremental" ref="intro/01_slide/5">
 <h1>GIS Basics gis</h1>
 
 <h2>Image tiles</h2>
@@ -199,7 +203,7 @@ $('.family').bind('showoff:next', function(e) {
 <li>PolyLine</li>
 </ul>
 </div>
-</div><div class="slide" data-transition="none"><div class="content full-page" ref="intro/01_slide/5">
+</div><div class="slide" data-transition="none"><div class="content full-page" ref="intro/01_slide/6">
 <h1>Google Maps basics</h1>
 
 <ul>
@@ -221,7 +225,7 @@ $('.family').bind('showoff:next', function(e) {
 <li>Control width/height with CSS</li>
 </ul>
 </div>
-</div><div class="slide" data-transition="none"><div class="content full-page googlemap" ref="intro/01_slide/6">
+</div><div class="slide" data-transition="none"><div class="content full-page googlemap" ref="intro/01_slide/7">
 <h1>Standard Google map</h1>
 
 <p>This is what you get!</p>
@@ -242,7 +246,7 @@ $('.family').bind('showoff:next', function(e) {
 }());
 </script>
 </div>
-</div><div class="slide" data-transition="none"><div class="content full-page features" ref="intro/01_slide/7">
+</div><div class="slide" data-transition="none"><div class="content full-page features" ref="intro/01_slide/8">
 <h1>Some Google maps features</h1>
 
 <p>Google maps has quite alot of built in features ready to be used. Here are a few:</p>
